add final details

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               aria-label="Email input"
             />
             <img
-              class="base__button--error js__error-icon"
+              class="base__button--error-icon js__error-icon"
               src="./images/icon-error.svg"
               alt="error"
               aria-hidden="true"
