fix minor issues

--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@
               alt="error"
               aria-hidden="true"
             />
-            <button class="base__button" aria-label="Submit button">
+            <button
+              class="base__button"
+              aria-label="Submit button"
+              type="submit"
+              value="Submit"
+            >
               <img
                 src="./images/icon-arrow.svg"
                 alt="arrow"
